syntax = "proto3";

package files;

option go_package = "ImageGrpc/proto";

service FileService {
  rpc UploadFile(UploadRequest) returns (UploadResponse);
  rpc GetFile(GetRequest) returns (GetResponse);
  rpc AllFIle(AllRequest) returns (AllResponse);
}

message UploadRequest {
  bytes file = 1;
  string file_name = 2;
}

message UploadResponse {
  string status = 1;
}
message GetRequest {
  string file_name = 1;
}
message GetResponse {
  bytes file = 1;
}
message AllRequest {
  string req = 1;
}
message AllResponse {
  string file_name = 1;
  int64 creation_date = 2;
  int64 update_date = 3;
}